# zed-tailwindcss

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.sh  example-zed-settings.json  extension.toml
languages/tailwind-enhanced/: config.toml
snippets/: tailwind.json
src/: lib.rs
